--- a/index.html
+++ b/index.html
@@ -3,67 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Feliz Cumpleaños Amor 💖</title>
+  <title>FELIZ DIA SE SAN VALENTIN AMOR MIA TU Y YO 💖</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <canvas id="backgroundCanvas"></canvas>
 
   <!-- 🎈 Mensaje Especial -->
-  <div id="mensajeHappy">🎈 Happy Birthday 💚</div>
+  <div id="mensajeHappy">💌💗SAN VALENTIN ❤️ 💖 💕  </div>
 
   <div class="container">
-    <h1>🎂 Feliz Cumpleaños Mi Amor Mia 🎂</h1>
+    <h1>💖💗FELIZ DIA SE SAN VALENTIN AMOR MIA TU Y YO 💖</h1>
 
-    <img src="peluche.jpeg" class="foto" alt="Mi Amor" />
+    <img src="valentin1.png" class="foto" alt="Mi Amor" />
 
     <button id="openLetter">💌 Abrir Carta 💌</button>
 
     <div class="carta" id="carta">
       <p>
-        Amor mía, hoy es un día muy especial porque nació la persona que más amo en este mundo.  
-        Cada momento contigo es un regalo que la vida me da.  
-        Gracias por tu sonrisa, por tu ternura, por tu amor incondicional.  
-        Desde que llegaste a mi vida, todo es más bonito, más mágico.  
-        Tu mirada me inspira, tu voz me tranquiliza y tu amor me completa.  
-        Hoy no solo celebro tu cumpleaños, celebro que existes, que estás a mi lado.  
-        Espero que esta sorpresa te saque una sonrisa tan linda como la que yo amo.  
-        Te amo.  
-        Que este cumpleaños sea de lo mejor mi vida estas quedando viejita estas quedando viejita y nadie lo puede negar .  
-        ¡Feliz cumpleaños mi princesa hermosa! 💖  
-      <img src="1.jpeg" alt="Nosotros" style="width: 3cm; height: 4cm; border-radius: 7px;" />
-      <img src="2.jpeg" alt="Nosotros" style="width: 3cm; height: 4cm; border-radius: 7px;" />
-      <img src="3.jpeg" alt="Nosotros" style="width: 3cm; height: 4cm; border-radius: 7px;" />
-      <img src="4.jpeg" alt="Nosotros" style="width: 3cm; height: 4cm; border-radius: 7px;" />
+        Mi querido amor,
+
+En este 14 de febrero, quiero recordarte lo mucho que significas para mí. Aunque intento demostrarlo cada día, quiero aprovechar este momento para poner en palabras lo que a veces es difícil de decir con la profundidad que siento.
+
+Eres esa persona que llegó a mi vida y la llenó de colores, de sonrisas y de amor. Desde que te conocí, todo ha sido más hermoso, más brillante y tiene más significado. A tu lado, cada día se convierte en una aventura, y cada instante se vuelve único y especial.
+
+Quiero agradecerte por ser tú, por todas las pequeñas cosas que haces y que quizás no siempre menciono. Gracias por cada abrazo, cada palabra de apoyo y cada risa compartida. Eres mi refugio y mi alegría, y no hay lugar en el mundo donde prefiera estar que a tu lado.
+        ¡Te amo! ¡Feliz San Valentín! 💖  
+      <img src="cariño1.jpeg" alt="Nosotros" style="width: 3cm; height: 4cm; border-radius: 7px;" />
+      <img src="cariño2.jpeg" alt="Nosotros" style="width: 3cm; height: 4cm; border-radius: 7px;" />
+      <img src="cariño3.jpeg" alt="Nosotros" style="width: 3cm; height: 4cm; border-radius: 7px;" />
+      
     </p>
     </div>
 
     <div class="media">
       <video controls>
-        <source src="mi amor.mp4" type="video/mp4" />
+        <source src="valentin.mp4.mp4" type="video/mp4" />
         Tu navegador no soporta el video.
       </video>
 
       <div class="imagenes-extra">
-        <img src="flor.jpeg" alt="Rosas" class="iconito" />
-        <img src="peluche.jpeg" alt="Peluche" class="iconito" />
+        <img src="valentin.png" alt="Rosas" class="iconito" />
+        <img src="valentin1.png" alt="Peluche" class="iconito" />
       </div>
     </div>
 
-    <h2>📸 Nuestros Momentos 📸</h2>
+    <h2>📸 Nuestros Momentos 🤳</h2>
     <div class="galeria">
-      <img src="foto novio1.jpeg" class="foto-galeria fade-in" />
-      <img src="foto novia2.jpeg" class="foto-galeria fade-in" />
-      <img src="novia3.jpeg" class="foto-galeria fade-in" />
+      <img src="amorvalentin1.jpeg" class="foto-galeria fade-in" />
+      <img src="amorvalentin2.jpeg" class="foto-galeria fade-in" />
+      <img src="amorvalentin3.jpeg" class="foto-galeria fade-in" />
     </div>
   </div>
 
-  <!-- 🎵 Música de fondo -->
-  <audio autoplay loop>
-    <source src="MUSICA.MP3.mpeg" type="audio/mp3">
-    Tu navegador no soporta audio.
-  </audio>
-
-  <script src="script.js"></script>
-</body>
-</html>
+ <!-- 🎵 Música de fondo --> <audio autoplay loop> <source src="musicasan.mp3" type="audio/mp3"> Tu navegador no soporta audio. </audio> <script src="script.js"></script> </body> </html>
